--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -70,6 +70,7 @@ body {
 @media screen and (max-width: 762px) {
     .project-card {
         width: 375px;
-        height: 375px;
+        min-width: 300px;
+        margin: 50px 0;
     }
 }
